tests/paczka1/small_fuzzy/57614882.err
Error in line 2: txM S244 93,3
Error in line 6: txM S7 95,4
Error in line 7: txM A478 4,5
